Elastic: Fix text selection with Shift+PageUp and Shift+PageDown in plain text editor when using Chrome (#7230)

--- a/skins/elastic/styles/widgets/editor.less
+++ b/skins/elastic/styles/widgets/editor.less
@@ -898,6 +898,7 @@ html.touch .mce-grid td {
         font-family: monospace;
         width: 100% !important;
         padding-top: 2.5rem;
+        resize: none;
     }
 
     & > iframe { // e.g. mailvelope frame
